<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="skin:skin_img:background"
    android:background="@drawable/skin_img_default"
    android:orientation="vertical"
    tools:context="com.example.asus.activity.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/account_input_shape"
        android:divider="@drawable/linearlayout_divider_shape"
        android:dividerPadding="3dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:showDividers="middle"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/usericon"
                />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:autoLink="email"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress"
                android:textColor="#d1c0b9"
                android:textColorHint="#d1c0b9"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/nameicon"
                />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLength="10"
                android:autoLink="email"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="#d1c0b9"
                android:textColorHint="#d1c0b9"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/passicon"
                />

            <EditText
                android:id="@+id/pasword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="#d1c0b9"
                android:textColorHint="#d1c0b9"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:background="@drawable/orange_bt_selector"
        android:onClick="commit"
        android:text="@string/bt_ok"
        android:textColor="#e6ddda"
        android:textSize="15sp"
        />
</LinearLayout>


